# neo4c

./: .gitignore  CMakeLists.txt  README.md  results.txt
src/: combination.h  direction.h  graph.c  graph.h  relationship.h
src/benchmarks/: main.c
src/include/: cJSON.c  cJSON.h  roaring.c  roaring.h
src/test/: ctest.h  main.c  node-degree.c  node-properties.c  node.c  relationship-properties.c  relationship-types.c  relationship.c  traversing.c
